correção arquivos fora da pasta

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <img src="img/Logo.svg" alt="logo alura" class="container__imagem">
             </div>
             <div class="container">
-                <a href="#"><img src="img/Favoritos.svg" alt="favoritos" class="container__imagem"></a>
-                <a href="#"><img src="img/Compras.svg" alt="compras" class="container__imagem"></a>
-                <a href="#"><img src="img/Usuário.svg" alt="usuarios" class="container__imagem"></a>
+                <a href="#"><img src="Favoritos.svg" alt="favoritos" class="container__imagem"></a>
+                <a href="#"><img src="Compras.svg" alt="compras" class="container__imagem"></a>
+                <a href="#"><img src="Usuário.svg" alt="usuarios" class="container__imagem"></a>
             </div>
         </header>
         <section class="banner">
@@ -60,13 +60,13 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="livro 1"></div>
-                    <div class="swiper-slide"><img src="img/Portugol.svg" alt="livro 2"></div>
-                    <div class="swiper-slide"><img src="img/Tuning.svg" alt="livro 3"></div>
-                    <div class="swiper-slide"><img src="img/Javascript.svg" alt="livro 4"></div>
-                    <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="livro 5"></div>
-                    <div class="swiper-slide"><img src="img/Nodejs.svg" alt="livro 6"></div>
-                    <div class="swiper-slide"><img src="img/ReactNative.svg" alt="livro 7"></div>
+                    <div class="swiper-slide"><img src="ApacheKafka.svg" alt="livro 1"></div>
+                    <div class="swiper-slide"><img src="Portugol.svg" alt="livro 2"></div>
+                    <div class="swiper-slide"><img src="Tuning.svg" alt="livro 3"></div>
+                    <div class="swiper-slide"><img src="Javascript.svg" alt="livro 4"></div>
+                    <div class="swiper-slide"><img src="Arquitetura.svg" alt="livro 5"></div>
+                    <div class="swiper-slide"><img src="Nodejs.svg" alt="livro 6"></div>
+                    <div class="swiper-slide"><img src="ReactNative.svg" alt="livro 7"></div>
                 </div>
             
                 <!-- If we need navigation buttons -->
@@ -87,15 +87,15 @@
                         <p class="descrição__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
                     </div>
                     <!-- 2ª coluna -->
-                    <img src="img/Angula.svg" alt="angula" class="descrição__imagem">
+                    <img src="Angula.svg" alt="angula" class="descrição__imagem">
                 </div>
 
                 <!-- 2ª linha -->
                 <div class="card__botões">
                     <!-- 1ª coluna -->
                     <ul class="botões">
-                        <li class="botões__item"><img src="img/Favoritos.svg" alt="favoritos"></li>
-                        <li class="botões__item"><img src="img/Compras.svg" alt="compras"></li>
+                        <li class="botões__item"><img src="Favoritos.svg" alt="favoritos"></li>
+                        <li class="botões__item"><img src="Compras.svg" alt="compras"></li>
                     </ul>
                     <!-- 2ª coluna -->
                     <a href="#" class="botões__ancora">Saiba mais</a>
@@ -113,10 +113,10 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                    <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="livro 1"></div>
-                    <div class="swiper-slide"><img src="img/Tuning.svg" alt="livro 3"></div>
-                    <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="livro 5"></div>
-                    <div class="swiper-slide"><img src="img/ReactNative.svg" alt="livro 7"></div>
+                    <div class="swiper-slide"><img src="ApacheKafka.svg" alt="livro 1"></div>
+                    <div class="swiper-slide"><img src="Tuning.svg" alt="livro 3"></div>
+                    <div class="swiper-slide"><img src="Arquitetura.svg" alt="livro 5"></div>
+                    <div class="swiper-slide"><img src="ReactNative.svg" alt="livro 7"></div>
                 </div>
             
                 <!-- If we need navigation buttons -->
@@ -132,21 +132,21 @@
                 <div class="card__descrição">
                     <!-- 1ª coluna -->
                     <div class="descrição">
-                        <img src="img/Estrelinhas.svg" alt="estrelas" class="descrição__imagem">
+                        <img src="Estrelinhas.svg" alt="estrelas" class="descrição__imagem">
                         <h3 class="descrição__titulo">Autora do Mês</h3>
                         <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
                         <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
                     </div>
                     <!-- 2ª coluna -->
-                    <img src="img/Perfil-escritora 1.svg" alt="foto escritora" class="descrição__imagem">
+                    <img src="Perfil-escritora 1.svg" alt="foto escritora" class="descrição__imagem">
                 </div>
 
                 <!-- 2ª linha -->
                 <div class="card__botões">
                     <!-- 1ª coluna -->
                     <ul class="botões">
-                        <li class="botões__item"><img src="img/Favoritos.svg" alt="favoritos"></li>
-                        <li class="botões__item"><img src="img/Compras.svg" alt="compras"></li>
+                        <li class="botões__item"><img src="Favoritos.svg" alt="favoritos"></li>
+                        <li class="botões__item"><img src="Compras.svg" alt="compras"></li>
                     </ul>
                     <!-- 2ª coluna -->
                     <a href="#" class="botões__ancora">Saiba mais</a>
