--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a href="#" class="lista-menu__link">Design e UX</a>
                     </li>
                 </ul>
-                <img src="img/Logo.svg" alt="logo alura" class="container__imagem">
+                <img src="Logo.svg" alt="logo alura" class="container__imagem">
             </div>
             <div class="container">
                 <a href="#"><img src="Favoritos.svg" alt="favoritos" class="container__imagem"></a>
